check.txt
warning: unused import: `std::collections::HashMap`
 --> crates\feeder_tokyo\src\bin\brain.rs:6:5
  |
6 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `feeder_tokyo` (bin "brain") generated 1 warning (run `cargo fix --bin "brain" -p feeder_tokyo` to apply 1 suggestion)
    Checking app_runner v0.1.0 (E:\Projects\test\crates\app_runner)
warning: unused import: `mpsc`
  --> crates\app_runner\src\bootstrap.rs:21:19
   |
21 | use tokio::sync::{mpsc, RwLock};
   |                   ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `probability_total` on type `&ShadowStats`
    --> crates\app_runner\src\state.rs:1514:14
     |
1514 |         self.probability_total.store(0, Ordering::Relaxed);
     |              ^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `window_id`, `started_at`, `started_at_ms`, `quote_attempted`, `quote_blocked` ... and 54 others

error[E0609]: no field `probability_total` on type `&ShadowStats`
    --> crates\app_runner\src\state.rs:1708:14
     |
1708 |         self.probability_total.fetch_add(1, Ordering::Relaxed);
     |              ^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `window_id`, `started_at`, `started_at_ms`, `quote_attempted`, `quote_blocked` ... and 54 others

error[E0609]: no field `probability_total` on type `&ShadowStats`
    --> crates\app_runner\src\state.rs:2100:38
     |
2100 |         let probability_total = self.probability_total.load(Ordering::Relaxed);
     |                                      ^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `window_id`, `started_at`, `started_at_ms`, `quote_attempted`, `quote_blocked` ... and 54 others

warning: variable does not need to be mutable
   --> crates\app_runner\src\strategy_runtime.rs:705:13
    |
705 |         let mut push_candidate = |bucket: &mut Vec<PredatorCandIn>,
    |             ----^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0560]: struct `ShadowStats` has no field named `probability_total`
    --> crates\app_runner\src\state.rs:1443:13
     |
1443 |             probability_total: AtomicU64::new(0),
     |             ^^^^^^^^^^^^^^^^^ `ShadowStats` does not have this field
     |
     = note: all struct fields are already assigned

Some errors have detailed explanations: E0560, E0609.
For more information about an error, try `rustc --explain E0560`.
warning: `app_runner` (bin "app_runner") generated 2 warnings
error: could not compile `app_runner` (bin "app_runner") due to 4 previous errors; 2 warnings emitted
